# swagger.yaml
@@ -115,3 +115,60 @@ paths:
                     description: Bad Request
                 500:
                     description: Internal server error
+
+    /login:
+        post:
+            tags:
+                - User
+            summary: login page
+            consumes:
+                - application/json
+            produces:
+                - application/json
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                email:
+                                    type: string
+                                password:
+                                    type: string
+            responses:
+                200:
+                    description: All good success
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    success:
+                                        type: boolean
+                                    token:
+                                        type: string
+                                    user:
+                                        type: object
+                                        properties:
+                                            name:
+                                                type: string
+                                            email:
+                                                type: string
+                                            role:
+                                                type: string
+                                            photo:
+                                                type: object
+                                                properties:
+                                                    id:
+                                                        type: string
+                                                    secure_url:
+                                                        type: string
+                                            _id:
+                                                type: string
+                                            createdAt:
+                                                type: string
+                400:
+                    description: Bad Request
+                500:
+                    description: Internal server error
